# embedvec

./: .gitignore  Cargo.toml
embedvec/: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
embedvec-py/: Cargo.toml  README.md  pyproject.toml
embedvec-py/python/embedvec_py/: __init__.py
embedvec-py/src/: lib.rs
embedvec/.cargo/: config.toml
embedvec/benches/: backend_bench.rs  hnsw_bench.rs
embedvec/examples/: scale_memory.rs
embedvec/src/: distance.rs  e8.rs  error.rs  filter.rs  h4.rs  hnsw.rs  lib.rs  metadata.rs  persistence.rs  python.rs  quantization.rs  storage.rs
embedvec/tests/: integration_tests.rs
