[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "embedvec-py"
version = "0.5.0"
description = "Fast, lightweight vector database with HNSW indexing and E8 quantization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
keywords = ["vector-database", "hnsw", "embedding", "rag", "ann", "similarity-search"]

[project.urls]
Homepage = "https://github.com/embedvec/embedvec"
Documentation = "https://docs.rs/embedvec"
Repository = "https://github.com/embedvec/embedvec"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "embedvec_py"
